# qtTicTacToe

./: CMakeLists.txt  README.md
src/app/: CMakeLists.txt  board.cpp  board.h  cmake_install.cmake  drawer.cpp  drawer.h  main.cpp  ticTacToeWindow.cpp  ticTacToeWindow.h
src/domain/: CMakeLists.txt  baseOpponent.h  boardConfig.cpp  boardConfig.h  cmake_install.cmake  winningPositions.h
src/impl/: CMakeLists.txt  minimax.cpp  minimax.h  opponentImpl.cpp  opponentImpl.h
